# curlparser

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
curlparser/: __init__.py  parser.py
tests/: test_parser.py
